@@ -2,7 +2,7 @@ sdparm (1.11-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 29 Nov 2018 01:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Mon, 03 Dec 2018 23:00:00 -0500
 
 sdparm (1.10-0.1) unstable; urgency=low
 
