@@ -2,9 +2,10 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.11 [20181129] [svn: r322]
+ChangeLog for sdparm-1.11 [20181203] [svn: r323]
   - add --out_mask=OM option for mode page control
     bitmask (current, changeable, default and/or saveable)
+  - add --examine option to iterate over mode+vpd pages
   - add Out of band management control mpage (spl5r01)
   - accept additional tansport acronyms (e.g. ib for srp)
   - power condition mpage: rename fields IDLE->IDLE_A;
@@ -25,6 +26,7 @@ ChangeLog for sdparm-1.11 [20181129] [svn: r322]
     with full reporting of response
   - --wscan option: expand bus type to include NVMe
   - mode page output with -HHH suitable for --inhex=
+  - add flexible geometery page (obsolete) sbc2r00
   - point svn:externals to rev 792 of sg3_utils
   - convert many two valued 'int's to bool
   - shellcheck corrections on scripts
